#1807: Refactor dependency versions and add mnemo parsing in Coordinates.